--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql-yoga": "^1.16.7",
     "prisma-client-lib": "^1.21.1"
   }
 }
